Fix for hiding x overflow not working

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -90,6 +90,7 @@ html {
 
 body {
   overflow-x: hidden;
+  position: relative;
 }
 
 h1 {
